# racon

./: .gitmodules  .travis.yml  CMakeLists.txt  Config.cmake.in  Makefile  README.md  meson.build
.github/workflows/: racon.yml
ci/: install_deps.sh
include/racon/: polisher.hpp  racon.hpp
scripts/: racon_wrapper.py
src/: main.cpp  overlap.cpp  overlap.hpp  polisher.cpp  polisher.hpp  window.cpp  window.hpp
src/cuda/: cudaaligner.cpp  cudaaligner.hpp  cudabatch.cpp  cudabatch.hpp  cudapolisher.cpp  cudapolisher.hpp  cudautils.hpp
test/: meson.build  polisher_test.cpp  racon_test.cpp
